--- a/hotairbln.html
+++ b/hotairbln.html
@@ -16,6 +16,11 @@
 <body>
     <nav class="navbar">
         <img class="logo" src="images/WXLogo.svg" alt="World Xplore Logo">
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <ul>
             <li><a href="index.html" >Home</a></li>
             <li class="dropdown">
@@ -55,6 +60,15 @@
     <footer id="hotairblnfooter">
         <p>&copy; 2023 World Xplore</p>
     </footer>
+
+    <script>
+        const hamburger = document.querySelector('.hamburger-menu');
+        const navLinks = document.querySelector('.navbar ul');
+    
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('show');
+        });
+    </script>
 </body>
 
 </html>
