--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <body id="indexbody">
     <nav class="navbar">
         <img class="logo" src="images/WXLogo.svg" alt="World Xplore Logo">
+        <div class="hamburger-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li class="dropdown">
@@ -60,6 +65,15 @@
     <footer id="indexfooter">
         <p>&copy; 2023 World Xplore</p>
     </footer>
+
+    <script>
+        const hamburger = document.querySelector('.hamburger-menu');
+        const navLinks = document.querySelector('.navbar ul');
+    
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('show');
+        });
+    </script>
 
 </body>
 
